interview-task-job-management/src/main/java/com/example/testJobManagement/error/InvalidJobException.java
package com.example.testJobManagement.error;

public class InvalidJobException extends RuntimeException {

    public InvalidJobException(String msg) {
        super(msg);
    }

}
